add dummy phone number and email
